--- a/src/app/topbar/topbar.html
+++ b/src/app/topbar/topbar.html
@@ -31,16 +31,31 @@
           ><i class="fab fa-tiktok"></i
         ></a>
 
-        <button
-          class="lang-switcher"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#langSwitcher"
-        >
-          <span class="fa fa-globe"></span>
-        </button>
+        <div class="dropdown">
+          <button
+            class="btn btn-primary btn-square border border-white me-3 rounded"
+            type="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            <i class="fa fa-globe"></i>
+          </button>
 
-        <div id="langSwitcher"><button>Arabic</button><button>English</button></div>
+          <ul class="dropdown-menu dropdown-menu-end rounded-1">
+            <li>
+              <button class="dropdown-item d-flex align-items-center" (click)="switchLang('ar')">
+                <img src="img/uae.jpg" alt="Arabic" width="32" height="32" class="me-3 rounded" />
+                <span>العربية</span>
+              </button>
+            </li>
+            <li>
+              <button class="dropdown-item d-flex align-items-center" (click)="switchLang('en')">
+                <img src="img/uk.jpg" alt="English" width="31" height="31" class="me-3 rounded" />
+                <span>English</span>
+              </button>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
