--- a/src/app/copyright/copyright.html
+++ b/src/app/copyright/copyright.html
@@ -4,8 +4,8 @@
       <div class="col-md-6 text-center mb-md-0">
         <span class="text-body"
           ><a href="#" class="border-bottom text-white"
-            ><i class="fas fa-copyright text-light me-2"></i>Your Site Name</a
-          >, All right reserved.</span
+            ><i class="fas fa-copyright text-light me-1"></i>Auro<sup>eg</sup></a
+          > {{ 'copyrights.rights' | translate }}</span
         >
       </div>
     </div>
