--- a/src/app/services/services-section/services-section.html
+++ b/src/app/services/services-section/services-section.html
@@ -8,7 +8,7 @@
       <p class="text-uppercase text-secondary fs-5 mb-0">
         {{ translateService.currentLang === 'en' ? 'Our' : '' }} {{ 'nav.services' | translate }}
       </p>
-      <h2 class="display-4 text-capitalize mb-3">{{ 'services.title' | translate }}</h2>
+      <h2 class="display-5 text-capitalize mb-3">{{ 'services.title' | translate }}</h2>
     </div>
     <div class="row g-4">
       <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
@@ -36,7 +36,7 @@
             </div>
             <div
               class="btn-xl-square bg-secondary p-4"
-              style="width: 80px; height: 80px; border-bottom-right-radius: 15px"
+              style="width: 80px; height: 80px; border-bottom-right-radius: 15px;border-bottom-left-radius: 15px"
             >
               <i class="fas fa-home text-primary fa-2x"></i>
             </div>
@@ -68,7 +68,7 @@
             </div>
             <div
               class="btn-xl-square bg-secondary p-4"
-              style="width: 80px; height: 80px; border-bottom-right-radius: 15px"
+              style="width: 80px; height: 80px; border-bottom-right-radius: 15px;border-bottom-left-radius: 15px"
             >
               <i class="fas fa-users-cog text-primary fa-2x"></i>
             </div>
@@ -100,7 +100,7 @@
             </div>
             <div
               class="btn-xl-square bg-secondary p-4"
-              style="width: 80px; height: 80px; border-bottom-right-radius: 15px"
+              style="width: 80px; height: 80px; border-bottom-right-radius: 15px;border-bottom-left-radius: 15px"
             >
               <i class="fas fa-hospital-user text-primary fa-2x"></i>
             </div>
@@ -132,7 +132,7 @@
             </div>
             <div
               class="btn-xl-square bg-secondary p-4"
-              style="width: 80px; height: 80px; border-bottom-right-radius: 15px"
+              style="width: 80px; height: 80px; border-bottom-right-radius: 15px;border-bottom-left-radius: 15px"
             >
               <i class="fas fa-file-invoice-dollar text-primary fa-2x"></i>
             </div>
@@ -164,7 +164,7 @@
             </div>
             <div
               class="btn-xl-square bg-secondary p-4"
-              style="width: 80px; height: 80px; border-bottom-right-radius: 15px"
+              style="width: 80px; height: 80px; border-bottom-right-radius: 15px;border-bottom-left-radius: 15px"
             >
               <i class="fas fa-cogs text-primary fa-2x"></i>
             </div>
@@ -196,7 +196,7 @@
             </div>
             <div
               class="btn-xl-square bg-secondary p-4"
-              style="width: 80px; height: 80px; border-bottom-right-radius: 15px"
+              style="width: 80px; height: 80px; border-bottom-right-radius: 15px;border-bottom-left-radius: 15px"
             >
               <i class="fas fa-sitemap text-primary fa-2x"></i>
             </div>
@@ -226,7 +226,7 @@
             </div>
             <div
               class="btn-xl-square bg-secondary p-4"
-              style="width: 80px; height: 80px; border-bottom-right-radius: 15px"
+              style="width: 80px; height: 80px; border-bottom-right-radius: 15px;border-bottom-left-radius: 15px"
             >
               <i class="fas fa-sitemap text-primary fa-2x"></i>
             </div>
@@ -256,7 +256,7 @@
             </div>
             <div
               class="btn-xl-square bg-secondary p-4"
-              style="width: 80px; height: 80px; border-bottom-right-radius: 15px"
+              style="width: 80px; height: 80px; border-bottom-right-radius: 15px;border-bottom-left-radius: 15px"
             >
               <i class="fas fa-sitemap text-primary fa-2x"></i>
             </div>
@@ -286,7 +286,7 @@
             </div>
             <div
               class="btn-xl-square bg-secondary p-4"
-              style="width: 80px; height: 80px; border-bottom-right-radius: 15px"
+              style="width: 80px; height: 80px; border-bottom-right-radius: 15px;border-bottom-left-radius: 15px"
             >
               <i class="fas fa-sitemap text-primary fa-2x"></i>
             </div>
