--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -4,24 +4,23 @@
       <div class="col-md-6 col-lg-6 col-xl-4">
         <div class="footer-item d-flex flex-column">
           <div class="footer-item">
-            <h4 class="text-white mb-4">Newsletter</h4>
+            <h4 class="text-white mb-4">{{ 'footer.newsletter.title' | translate }}</h4>
             <p class="mb-3">
-              Subscribe to our newsletter to receive the latest updates, industry insights, project
-              highlights, and exclusive offers delivered straight to your inbox
+              {{ 'footer.newsletter.desc' | translate }}
             </p>
             <div class="position-relative mx-auto">
               <input
-
                 class="form-control w-100 py-3 ps-4 pe-5 rounded"
                 type="text"
-                placeholder="Enter your email"
+                placeholder="{{ 'contact.form.email' | translate }}"
               />
               <button
-
                 type="button"
-                class="btn btn-secondary position-absolute top-0 end-0 py-2 mt-1 me-2 rounded"
+                class="btn btn-secondary end py-2 mt-1 me-2 rounded"
               >
-                <a href="mailto:Altawfiqdemolition@gmail.com">SignUp</a>
+                <a href="mailto:Altawfiqdemolition@gmail.com">{{
+                  'app.buttons.signup' | translate
+                }}</a>
               </button>
             </div>
           </div>
@@ -29,20 +28,31 @@
       </div>
       <div class="col-md-6 col-lg-6 col-xl-4">
         <div class="footer-item d-flex flex-column">
-          <h4 class="text-white mb-4">Explore</h4>
-          <a routerLink="/home"><i class="fas fa-angle-right me-2"></i> Home</a>
-          <a routerLink="/services"><i class="fas fa-angle-right me-2"></i> Services</a>
-          <a routerLink="/about"><i class="fas fa-angle-right me-2"></i> About Us</a>
-          <a routerLink="/blog"><i class="fas fa-angle-right me-2"></i> Latest Projects</a>
-          <a routerLink="/contact"><i class="fas fa-angle-right me-2"></i> Contact Us</a>
+          <h4 class="text-white mb-4">{{ 'footer.explore.title' | translate }}</h4>
+          <a routerLink="/home"
+            ><i class="fas fa-angle-right me-2"></i> {{ 'nav.home' | translate }}</a
+          >
+          <a routerLink="/services"
+            ><i class="fas fa-angle-right me-2"></i> {{ 'nav.services' | translate }}</a
+          >
+          <a routerLink="/about"
+            ><i class="fas fa-angle-right me-2"></i> {{ 'nav.about' | translate }}</a
+          >
+          <a routerLink="/blog"
+            ><i class="fas fa-angle-right me-2"></i> {{ 'nav.blog' | translate }}</a
+          >
+          <a routerLink="/contact"
+            ><i class="fas fa-angle-right me-2"></i> {{ 'nav.contact' | translate }}</a
+          >
         </div>
       </div>
 
       <div class="col-md-6 col-lg-6 col-xl-4">
         <div class="footer-item d-flex flex-column">
-          <h4 class="text-white mb-4">Contact Info</h4>
+          <h4 class="text-white mb-4">{{ 'footer.contact.title' | translate }}</h4>
           <a href="https://maps.app.goo.gl/LZYL43N3DXkTnaCi8" class="text-muted me-4"
-            ><i class="fas fa-map-marker-alt text-secondary me-2"></i>Find Our Location</a
+            ><i class="fas fa-map-marker-alt text-secondary me-2"></i
+            >{{ 'topbar.location' | translate }}</a
           >
           <a href="mailto:Altawfiqdemolition@gmail.com" class="text-muted me-0"
             ><i class="fas fa-envelope text-secondary me-2"></i>Altawfiqdemolition@gmail.com</a
@@ -57,28 +67,14 @@
           <div class="footer-btn d-flex align-items-center mt-4">
             <a
               class="btn btn-secondary btn-md-square me-2 rounded"
-
               href="https://www.facebook.com/share/17d6us5UEP/"
               ><i class="fab fa-facebook-f text-white"></i
             ></a>
             <a
               class="btn btn-secondary btn-md-square me-2 rounded"
-
               href="https://www.tiktok.com/@altawfiq.demoliti?is_from_webapp=1&sender_device=pc"
               ><i class="fab fa-tiktok text-white"></i
             ></a>
-            <!-- <a
-                  class="btn btn-secondary btn-md-square me-2 rounded"
-
-                  href=""
-                  ><i class="fab fa-instagram text-white"></i
-                ></a>
-                <a
-                  class="btn btn-secondary btn-md-square me-0 rounded"
-
-                  href=""
-                  ><i class="fab fa-linkedin-in text-white"></i
-                ></a> -->
           </div>
         </div>
       </div>
