--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -1,7 +1,7 @@
 <div class="container-fluid sticky-top px-0">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-light py-3 px-4">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-light py-3 px-2 px-sm-3">
     <a routerLink="/home" class="navbar-brand p-0">
-      <h3 class="text-secondary fs-4 fw-bold">
+      <h3 class="text-secondary nav-text mb-0 d-flex align-items-center gap-1">
         <img src="img/logo.png" alt="" width="64px" height="64px" />
         {{ 'nav.title' | translate }}
       </h3>
