--- a/src/app/topbar/topbar.html
+++ b/src/app/topbar/topbar.html
@@ -1,24 +1,24 @@
-<div class="container-fluid topbar d-none d-xl-block w-100">
+<div class="container-fluid topbar w-100">
   <div class="row gx-0 align-items-center" style="height: 45px">
-    <div class="col-lg-8 text-center text-lg-start mb-lg-0">
+    <div class="col-lg-8 text-center text-lg-start mb-lg-0 d-none d-xl-block">
       <div class="d-flex flex-wrap">
         <a href="https://maps.app.goo.gl/LZYL43N3DXkTnaCi8" class="text-muted me-4"
-          ><i class="fas fa-map-marker-alt text-secondary me-2"></i
+          ><i class="fas fa-map-marker-alt text-secondary mx-2"></i
           >{{ 'topbar.location' | translate }}</a
         >
         <a href="tel:+971542466755" class="text-muted me-4"
-          ><i class="fas fa-phone-alt text-secondary me-2"></i>+971542466755</a
+          ><i class="fas fa-phone-alt text-secondary mx-2"></i>+971542466755</a
         >
-        <a href="tel:+971507190742" class="text-muted me-4"
-          ><i class="fas fa-phone-alt text-secondary me-2"></i>+971507190742</a
+        <a href="tel:+971507190742" class="text-muted me-4 ms-3"
+          ><i class="fas fa-phone-alt text-secondary mx-2"></i>+971507190742</a
         >
         <a href="mailto:Altawfiqdemolition@gmail.com" class="text-muted me-0"
-          ><i class="fas fa-envelope text-secondary me-2"></i>Altawfiqdemolition@gmail.com</a
+          ><i class="fas fa-envelope text-secondary mx-2"></i>Altawfiqdemolition@gmail.com</a
         >
       </div>
     </div>
     <div class="col-lg-4 text-center text-lg-end">
-      <div class="d-flex align-items-center justify-content-end">
+      <div class="d-flex align-items-center nav-links-position">
         <!-- Social Media -->
         <a
           href="https://www.facebook.com/share/17d6us5UEP/"
