--- a/src/app/features/features-section/features-section.html
+++ b/src/app/features/features-section/features-section.html
@@ -15,7 +15,7 @@
             class="feature-img bg-secondary d-inline-flex justify-content-center align-items-center p-4 rounded"
             style="width: 100px; height: 100px"
           >
-            <i class="fas fa-city text-primary fa-3x"></i>
+            <i class="fas fa-id-card text-primary fa-3x"></i>
           </div>
           <h2 class="h4 d-block my-4">{{'features.licensed.title' | translate}}</h2>
           <p class="mb-0 text-start">
@@ -29,7 +29,7 @@
             class="feature-img bg-secondary d-inline-flex justify-content-center align-items-center p-4 rounded"
             style="width: 100px; height: 100px"
           >
-            <i class="fas fa-funnel-dollar text-primary fa-3x"></i>
+            <i class="fas fa-award text-primary fa-3x"></i>
           </div>
           <h2 class="h4 d-block my-4">{{'features.experience.title' | translate}}</h2>
           <p class="mb-0 text-start">
@@ -42,7 +42,7 @@
           <div
             class="feature-img bg-secondary d-inline-flex justify-content-center align-items-center p-4 rounded"
           >
-            <i class="fas fa-tools text-primary fa-3x"></i>
+            <i class="fas fa-truck-monster text-primary fa-3x"></i>
           </div>
           <h2 class="h4 d-block my-4">{{'features.equipment.title' | translate}}</h2>
           <p class="mb-0 text-start">
@@ -55,7 +55,7 @@
           <div
             class="feature-img bg-secondary d-inline-flex justify-content-center align-items-center p-4 rounded"
           >
-            <i class="fas fa-tools text-primary fa-3x"></i>
+            <i class="fas fa-users-gear text-primary fa-3x"></i>
           </div>
           <h2 class="h4 d-block my-4">{{'features.team.title' | translate}}</h2>
           <p class="mb-0 text-start">
@@ -68,7 +68,7 @@
           <div
             class="feature-img bg-secondary d-inline-flex justify-content-center align-items-center p-4 rounded"
           >
-            <i class="fas fa-tools text-primary fa-3x"></i>
+            <i class="fas fa-shield-halved text-primary fa-3x"></i>
           </div>
           <h2 class="h4 d-block my-4">{{'features.safety.title' | translate}}</h2>
           <p class="mb-0 text-start">
@@ -81,7 +81,7 @@
           <div
             class="feature-img bg-secondary d-inline-flex justify-content-center align-items-center p-4 rounded"
           >
-            <i class="fas fa-tools text-primary fa-3x"></i>
+            <i class="fas fa-kit-medical text-primary fa-3x"></i>
           </div>
           <h2 class="h4 d-block my-4">{{'features.emergency.title' | translate}}</h2>
           <p class="mb-0 text-start">
