--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -45,7 +45,7 @@
       </div>
       <div class="carousel-item">
         <video #slideVideo autoplay muted="muted" loop playsinline>
-          <source src="img/video-2.mp4" type="video/mp4" />
+          <source src="img/videoo-1.mp4" type="video/mp4" />
         </video>
         <div class="carousel-caption">
           <h1
