--- a/src/app/topbar/topbar.css
+++ b/src/app/topbar/topbar.css
@@ -21,6 +21,6 @@
   z-index: 100000000;
 }
 
-:dir(rtl) i.fas {
-  transform: scaleX(-1);
+:dir(ltr) i.fas {
+  transform: scaleX(-1) !important;
 }
