--- a/src/app/about/about-section/about-section.html
+++ b/src/app/about/about-section/about-section.html
@@ -3,8 +3,8 @@
     <div class="row g-5 align-items-center">
       <div class="col-xl-6 wow fadeInLeft rounded-3" data-wow-delay="0.1s">
         <div class="about-item-image d-flex rounded-3">
-          <img src="img/about.jpg" class="img-1 img-fluid w-50 rounded-3" alt="" />
-          <img src="img/about-3.jpg" class="img-2 img-fluid w-50 rounded-3" alt="" />
+          <img src="img/2.png" class="img-1 img-fluid w-50 rounded-3" alt="" />
+          <img src="img/8.png" class="img-2 img-fluid w-50 rounded-3" alt="" />
           <div class="about-item-image-content">
             <img
               src="img/about-1.png"
@@ -36,17 +36,17 @@
                   <div class="text-secondary">
                     <i class="fas fa-user-shield fa-3x"></i>
                   </div>
-                  <h4 class="ms-3 mb-0 d-flex align-items-center">
+                  <h5 class="ms-3 mb-0 d-flex align-items-center">
                     {{ 'about.quotes.first' | translate }}
-                  </h4>
+                  </h5>
                 </div>
                 <div class="d-flex">
                   <div class="text-secondary">
                     <i class="fas fa-users-cog fa-3x"></i>
                   </div>
-                  <h4 class="ms-3 mb-0 d-flex align-items-center">
+                  <h5 class="ms-3 mb-0 d-flex align-items-center">
                     {{ 'about.quotes.second' | translate }}
-                  </h4>
+                  </h5>
                 </div>
               </div>
             </div>
