--- a/src/app/blog/blog-section/blog-section.html
+++ b/src/app/blog/blog-section/blog-section.html
@@ -13,7 +13,7 @@
       <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
         <div class="blog-item h-100">
           <div class="blog-img">
-            <img [src]="`img/blog-${i}.jpg`" class="img-fluid w-100" alt="" />
+            <img [src]="`img/${(20-i)}.jpeg`" class="img-fluid w-100" alt="" />
           </div>
           <div class="blog-content p-4">
             <div class="d-flex justify-content-between mb-3">
