--- a/src/app/copyright/copyright.html
+++ b/src/app/copyright/copyright.html
@@ -3,7 +3,7 @@
     <div class="row g-4 align-items-center justify-content-center">
       <div class="col-md-6 text-center mb-md-0">
         <span class="text-body"
-          ><a href="#" class="border-bottom text-white"
+          ><a href="https://auro-eg.com/" class="border-bottom text-white"
             ><i class="fas fa-copyright text-light me-1"></i>Auro<sup>eg</sup></a
           > {{ 'copyrights.rights' | translate }}</span
         >
