--- a/src/app/services/services-section/services-section.html
+++ b/src/app/services/services-section/services-section.html
@@ -14,14 +14,14 @@
       <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
         <div class="service-item">
           <div class="service-img">
-            <img src="img/service-1.jpg" class="img-fluid w-100 rounded-3" alt="Image" />
+            <img src="img/4.png" class="img-fluid w-100 rounded-3" alt="Image" />
           </div>
           <div class="service-content text-center p-4">
             <div
               class="bg-secondary btn-xl-square mx-auto rounded"
               style="width: 120px; height: 120px"
             >
-              <i class="fas fa-home text-primary fa-4x"></i>
+              <i class="fas fa-hammer text-primary fa-4x"></i>
             </div>
             <p class="d-block fs-4 my-4 text-white text-white">
               {{ 'services.demolition.first.title' | translate }}
@@ -36,9 +36,14 @@
             </div>
             <div
               class="btn-xl-square bg-secondary p-4"
-              style="width: 80px; height: 80px; border-bottom-right-radius: 15px;border-bottom-left-radius: 15px"
+              style="
+                width: 80px;
+                height: 80px;
+                border-bottom-right-radius: 15px;
+                border-bottom-left-radius: 15px;
+              "
             >
-              <i class="fas fa-home text-primary fa-2x"></i>
+              <i class="fas fa-gavel text-primary fa-2x"></i>
             </div>
           </div>
         </div>
@@ -46,14 +51,14 @@
       <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
         <div class="service-item">
           <div class="service-img">
-            <img src="img/service-2.jpg" class="img-fluid w-100 rounded-3" alt="Image" />
+            <img src="img/10.jpeg" class="img-fluid w-100 rounded-3" alt="Image" />
           </div>
           <div class="service-content text-center p-4">
             <div
               class="bg-secondary btn-xl-square mx-auto rounded"
               style="width: 120px; height: 120px"
             >
-              <i class="fas fa-users-cog text-primary fa-4x"></i>
+              <i class="fas fa-dumpster text-primary fa-4x"></i>
             </div>
             <p class="d-block fs-4 my-4 text-white">
               {{ 'services.demolition.second.title' | translate }}
@@ -68,9 +73,14 @@
             </div>
             <div
               class="btn-xl-square bg-secondary p-4"
-              style="width: 80px; height: 80px; border-bottom-right-radius: 15px;border-bottom-left-radius: 15px"
+              style="
+                width: 80px;
+                height: 80px;
+                border-bottom-right-radius: 15px;
+                border-bottom-left-radius: 15px;
+              "
             >
-              <i class="fas fa-users-cog text-primary fa-2x"></i>
+              <i class="fas fa-truck text-primary fa-2x"></i>
             </div>
           </div>
         </div>
@@ -78,17 +88,17 @@
       <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
         <div class="service-item">
           <div class="service-img">
-            <img src="img/service-3.jpg" class="img-fluid w-100 rounded-3" alt="Image" />
+            <img src="img/1.png" class="img-fluid w-100 rounded-3" alt="Image" />
           </div>
           <div class="service-content text-center p-4">
             <div
               class="bg-secondary btn-xl-square mx-auto rounded"
               style="width: 120px; height: 120px"
             >
-              <i class="fas fa-hospital-user text-primary fa-4x"></i>
+              <i class="fas fa-cogs text-primary fa-4x"></i>
             </div>
             <p class="d-block fs-4 my-4 text-white">
-              {{ 'services.demolition.second.title' | translate }}
+              {{ 'services.demolition.third.title' | translate }}
             </p>
             <p class="text-white mb-4">
               {{ 'services.demolition.third.desc' | translate }}
@@ -100,9 +110,14 @@
             </div>
             <div
               class="btn-xl-square bg-secondary p-4"
-              style="width: 80px; height: 80px; border-bottom-right-radius: 15px;border-bottom-left-radius: 15px"
+              style="
+                width: 80px;
+                height: 80px;
+                border-bottom-right-radius: 15px;
+                border-bottom-left-radius: 15px;
+              "
             >
-              <i class="fas fa-hospital-user text-primary fa-2x"></i>
+              <i class="fas fa-cogs text-primary fa-2x"></i>
             </div>
           </div>
         </div>
@@ -110,14 +125,14 @@
       <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
         <div class="service-item">
           <div class="service-img">
-            <img src="img/service-4.jpg" class="img-fluid w-100 rounded-3" alt="Image" />
+            <img src="img/service-1.jpg" class="img-fluid w-100 rounded-3" alt="Image" />
           </div>
           <div class="service-content text-center p-4">
             <div
               class="bg-secondary btn-xl-square mx-auto rounded"
               style="width: 120px; height: 120px"
             >
-              <i class="fas fa-file-invoice-dollar text-primary fa-4x"></i>
+              <i class="fas fa-tools text-primary fa-4x"></i>
             </div>
             <p class="d-block fs-4 my-4 text-white">
               {{ 'services.demolition.fourth.title' | translate }}
@@ -132,9 +147,14 @@
             </div>
             <div
               class="btn-xl-square bg-secondary p-4"
-              style="width: 80px; height: 80px; border-bottom-right-radius: 15px;border-bottom-left-radius: 15px"
+              style="
+                width: 80px;
+                height: 80px;
+                border-bottom-right-radius: 15px;
+                border-bottom-left-radius: 15px;
+              "
             >
-              <i class="fas fa-file-invoice-dollar text-primary fa-2x"></i>
+              <i class="fas fa-tools text-primary fa-2x"></i>
             </div>
           </div>
         </div>
@@ -142,14 +162,14 @@
       <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
         <div class="service-item">
           <div class="service-img">
-            <img src="img/service-5.jpg" class="img-fluid w-100 rounded-3" alt="Image" />
+            <img src="img/3.jpeg" class="img-fluid w-100 rounded-3" alt="Image" />
           </div>
           <div class="service-content text-center p-4">
             <div
               class="bg-secondary btn-xl-square mx-auto rounded"
               style="width: 120px; height: 120px"
             >
-              <i class="fas fa-cogs text-primary fa-4x"></i>
+              <i class="fas fa-layer-group text-primary fa-4x"></i>
             </div>
             <p class="d-block fs-4 my-4 text-white">
               {{ 'services.demolition.fifth.title' | translate }}
@@ -164,9 +184,14 @@
             </div>
             <div
               class="btn-xl-square bg-secondary p-4"
-              style="width: 80px; height: 80px; border-bottom-right-radius: 15px;border-bottom-left-radius: 15px"
+              style="
+                width: 80px;
+                height: 80px;
+                border-bottom-right-radius: 15px;
+                border-bottom-left-radius: 15px;
+              "
             >
-              <i class="fas fa-cogs text-primary fa-2x"></i>
+              <i class="fas fa-layer-group text-primary fa-2x"></i>
             </div>
           </div>
         </div>
@@ -174,14 +199,14 @@
       <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
         <div class="service-item">
           <div class="service-img">
-            <img src="img/service-6.jpg" class="img-fluid w-100 rounded-3" alt="Image" />
+            <img src="img/11.jpeg" class="img-fluid w-100 rounded-3" alt="Image" />
           </div>
           <div class="service-content text-center p-4">
             <div
               class="bg-secondary btn-xl-square mx-auto rounded"
               style="width: 120px; height: 120px"
             >
-              <i class="fas fa-sitemap text-primary fa-3x"></i>
+              <i class="fas fa-person-digging text-primary fa-3x"></i>
             </div>
             <p class="d-block fs-4 my-4 text-white">
               {{ 'services.excavation.first.title' | translate }}
@@ -196,9 +221,14 @@
             </div>
             <div
               class="btn-xl-square bg-secondary p-4"
-              style="width: 80px; height: 80px; border-bottom-right-radius: 15px;border-bottom-left-radius: 15px"
+              style="
+                width: 80px;
+                height: 80px;
+                border-bottom-right-radius: 15px;
+                border-bottom-left-radius: 15px;
+              "
             >
-              <i class="fas fa-sitemap text-primary fa-2x"></i>
+              <i class="fas fa-person-digging text-primary fa-2x"></i>
             </div>
           </div>
         </div>
@@ -206,16 +236,18 @@
       <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
         <div class="service-item">
           <div class="service-img">
-            <img src="img/service-6.jpg" class="img-fluid w-100 rounded-3" alt="Image" />
+            <img src="img/14.jpeg " class="img-fluid w-100 rounded-3" alt="Image" />
           </div>
           <div class="service-content text-center p-4">
             <div
               class="bg-secondary btn-xl-square mx-auto rounded"
               style="width: 120px; height: 120px"
             >
-              <i class="fas fa-sitemap text-primary fa-3x"></i>
+              <i class="fas fa-road text-primary fa-3x"></i>
             </div>
-            <p class="d-block fs-4 my-4 text-white">{{ 'services.excavation.second.title' | translate }}</p>
+            <p class="d-block fs-4 my-4 text-white">
+              {{ 'services.excavation.second.title' | translate }}
+            </p>
             <p class="text-white mb-4">
               {{ 'services.excavation.second.desc' | translate }}
             </p>
@@ -226,9 +258,14 @@
             </div>
             <div
               class="btn-xl-square bg-secondary p-4"
-              style="width: 80px; height: 80px; border-bottom-right-radius: 15px;border-bottom-left-radius: 15px"
+              style="
+                width: 80px;
+                height: 80px;
+                border-bottom-right-radius: 15px;
+                border-bottom-left-radius: 15px;
+              "
             >
-              <i class="fas fa-sitemap text-primary fa-2x"></i>
+              <i class="fas fa-road text-primary fa-2x"></i>
             </div>
           </div>
         </div>
@@ -236,16 +273,18 @@
       <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
         <div class="service-item">
           <div class="service-img">
-            <img src="img/service-6.jpg" class="img-fluid w-100 rounded-3" alt="Image" />
+            <img src="img/15.jpeg" class="img-fluid w-100 rounded-3" alt="Image" />
           </div>
           <div class="service-content text-center p-4">
             <div
               class="bg-secondary btn-xl-square mx-auto rounded"
               style="width: 120px; height: 120px"
             >
-              <i class="fas fa-sitemap text-primary fa-3x"></i>
+              <i class="fas fa-border-all text-primary fa-3x"></i>
             </div>
-            <p class="d-block fs-4 my-4 text-white">{{ 'services.excavation.third.title' | translate }}</p>
+            <p class="d-block fs-4 my-4 text-white">
+              {{ 'services.excavation.third.title' | translate }}
+            </p>
             <p class="text-white mb-4">
               {{ 'services.excavation.third.desc' | translate }}
             </p>
@@ -256,9 +295,14 @@
             </div>
             <div
               class="btn-xl-square bg-secondary p-4"
-              style="width: 80px; height: 80px; border-bottom-right-radius: 15px;border-bottom-left-radius: 15px"
+              style="
+                width: 80px;
+                height: 80px;
+                border-bottom-right-radius: 15px;
+                border-bottom-left-radius: 15px;
+              "
             >
-              <i class="fas fa-sitemap text-primary fa-2x"></i>
+              <i class="fas fa-border-all text-primary fa-2x"></i>
             </div>
           </div>
         </div>
@@ -266,14 +310,14 @@
       <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
         <div class="service-item">
           <div class="service-img">
-            <img src="img/service-6.jpg" class="img-fluid w-100 rounded-3" alt="Image" />
+            <img src="img/16.jpeg" class="img-fluid w-100 rounded-3" alt="Image" />
           </div>
           <div class="service-content text-center p-4">
             <div
               class="bg-secondary btn-xl-square mx-auto rounded"
               style="width: 120px; height: 120px"
             >
-              <i class="fas fa-sitemap text-primary fa-3x"></i>
+              <i class="fas fa-file text-primary fa-3x"></i>
             </div>
             <p class="d-block fs-4 my-4 text-white">{{ 'services.paperwork.title' | translate }}</p>
             <p class="text-white mb-4">
@@ -286,9 +330,14 @@
             </div>
             <div
               class="btn-xl-square bg-secondary p-4"
-              style="width: 80px; height: 80px; border-bottom-right-radius: 15px;border-bottom-left-radius: 15px"
+              style="
+                width: 80px;
+                height: 80px;
+                border-bottom-right-radius: 15px;
+                border-bottom-left-radius: 15px;
+              "
             >
-              <i class="fas fa-sitemap text-primary fa-2x"></i>
+              <i class="fas fa-file text-primary fa-2x"></i>
             </div>
           </div>
         </div>
