ya rab fok elde2a

--- a/src/app/topbar/topbar.html
+++ b/src/app/topbar/topbar.html
@@ -1,4 +1,4 @@
-<div class="container-fluid topbar w-100">
+<div class="container-fluid topbar w-100 sticky-topbar">
   <div class="row gx-0 align-items-center" style="height: 45px">
     <div class="col-lg-8 text-center text-lg-start mb-lg-0 d-none d-xl-block">
       <div class="d-flex flex-wrap">
@@ -20,7 +20,7 @@
     <div class="col-lg-4 text-center text-lg-end">
       <div class="d-flex align-items-center nav-links-position">
         <!-- Social Media -->
-        <a
+        <!-- <a
           href="https://www.facebook.com/share/17d6us5UEP/"
           class="btn btn-primary btn-square border border-white me-3 rounded"
           ><i class="fab fa-facebook-f"></i
@@ -29,7 +29,7 @@
           href="https://www.tiktok.com/@altawfiq.demoliti?is_from_webapp=1&sender_device=pc"
           class="btn btn-primary btn-square border border-white me-3 rounded"
           ><i class="fab fa-tiktok"></i
-        ></a>
+        ></a> -->
 
         <div class="dropdown">
           <button
