--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,6 +66,12 @@
   background: var(--bs-primary);
 }
 /*** Topbar Start ***/
+
+.sticky-topbar {
+  position: sticky;
+  transition: 1s;
+  z-index: 1000000000;
+}
 .topbar {
   padding: 2px 10px 2px 20px;
   background: var(--bs-primary);
@@ -86,7 +92,7 @@
   position: relative;
   padding: 10px;
   font-weight: 400;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   font-size: 17px;
   transition: 0.5s;
   z-index: 99;
@@ -98,7 +104,7 @@
 
 .navbar .navbar-nav .nav-item::before,
 .navbar .navbar-nav .nav-item::after {
-  content: "";
+  content: '';
   width: 0;
   height: 0;
   position: absolute;
@@ -139,8 +145,8 @@
 
 .navbar .dropdown-toggle::after {
   border: none;
-  content: "\f107" !important;
-  font-family: "Font Awesome 5 Free";
+  content: '\f107' !important;
+  font-family: 'Font Awesome 5 Free';
   font-weight: 600;
   vertical-align: middle;
 }
@@ -233,7 +239,7 @@
   position: relative;
   overflow: hidden;
   background: linear-gradient(rgba(0, 18, 72, 0.7), rgba(0, 18, 72, 0.7)),
-    url(../img/carousel-2.jpg);
+    url(../img/carousel-1.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -295,7 +301,7 @@
 }
 
 .carousel .carousel-inner .carousel-item::after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -314,20 +320,19 @@
   z-index: 2;
 }
 
-@media(max-width:575.98px){
-  .carousel-caption{
+@media (max-width: 575.98px) {
+  .carousel-caption {
     right: 5% !important;
     left: 5% !important;
   }
 }
 
-@media(max-width:350px){
-  .carousel-caption{
+@media (max-width: 350px) {
+  .carousel-caption {
     right: 5px !important;
     left: 5px !important;
   }
 }
-
 
 .carousel .carousel-indicators {
   margin-bottom: 40px;
@@ -378,19 +383,18 @@
   color: var(--bs-white);
 }
 
-@media (max-width:991.98px){
+@media (max-width: 991.98px) {
   .carousel .carousel-control-prev,
-.carousel .carousel-control-next{
-  display: none;
-}
+  .carousel .carousel-control-next {
+    display: none;
+  }
 }
 /*** Carousel End ***/
 
 /*** About Start ***/
 .about .about-item-content-img {
   border: 4px solid;
-  border-color: var(--bs-secondary) var(--bs-primary) var(--bs-primary)
-    var(--bs-secondary);
+  border-color: var(--bs-secondary) var(--bs-primary) var(--bs-primary) var(--bs-secondary);
 }
 
 .about .about-item-image {
@@ -407,8 +411,7 @@
   margin-bottom: 250px;
   margin-right: 0;
   border: 4px solid;
-  border-color: var(--bs-secondary) var(--bs-light) var(--bs-light)
-    var(--bs-secondary);
+  border-color: var(--bs-secondary) var(--bs-light) var(--bs-light) var(--bs-secondary);
   z-index: 3;
 }
 
@@ -416,15 +419,14 @@
   margin-top: 250px;
   margin-left: 0;
   border: 4px solid;
-  border-color: var(--bs-light) var(--bs-secondary) var(--bs-secondary)
-    var(--bs-light);
+  border-color: var(--bs-light) var(--bs-secondary) var(--bs-secondary) var(--bs-light);
   z-index: 3;
 }
 
 .about .about-item-image::before {
   width: 80%;
   height: 80%;
-  content: "";
+  content: '';
   position: absolute;
   top: 50%;
   left: 50%;
@@ -478,7 +480,7 @@
 .feature .feature-item:hover a:hover {
   color: var(--bs-secondary);
 }
-.feature .feature-item .feature-img{
+.feature .feature-item .feature-img {
   width: 100px;
   height: 100px;
   align-self: center;
@@ -512,7 +514,7 @@
 }
 
 .service .service-item::after {
-  content: "";
+  content: '';
   width: 100%;
   height: 0;
   position: absolute;
@@ -571,8 +573,8 @@
 
 /*** Blog Start ***/
 .blog .blog-item .blog-img {
-  border-top-right-radius:10px !important ;
-  border-top-left-radius:10px !important ;
+  border-top-right-radius: 10px !important ;
+  border-top-left-radius: 10px !important ;
   position: relative;
   overflow: hidden;
 }
@@ -586,8 +588,8 @@
 }
 
 .blog .blog-item .blog-content {
-  border-bottom-right-radius:10px !important ;
-  border-bottom-left-radius:10px !important ;
+  border-bottom-right-radius: 10px !important ;
+  border-bottom-left-radius: 10px !important ;
   box-shadow: 0 0 45px rgba(0, 0, 0, 0.08);
 }
 
@@ -609,7 +611,7 @@
 }
 
 .contact .contact-map::before {
-  content: "";
+  content: '';
   width: 70%;
   height: 70%;
   position: absolute;
@@ -620,7 +622,7 @@
 }
 
 .contact .contact-map::after {
-  content: "";
+  content: '';
   width: 70%;
   height: 70%;
   position: absolute;
@@ -633,8 +635,7 @@
 
 /*** Footer Start ***/
 .footer {
-  background: linear-gradient(rgba(0, 18, 72, 0.9), rgba(0, 18, 72, 1)),
-    url(../img/footer-img.jpg);
+  background: linear-gradient(rgba(0, 18, 72, 0.9), rgba(0, 18, 72, 1)), url(../img/footer-img.jpg);
   background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
@@ -674,5 +675,3 @@
   background: var(--bs-dark);
 }
 /*** copyright end ***/
-
-
