--- a/src/app/contact/contact-section/contact-section.html
+++ b/src/app/contact/contact-section/contact-section.html
@@ -6,66 +6,106 @@
           <p class="text-uppercase text-secondary fs-5 mb-0">{{ 'contact.connect' | translate }}</p>
           <h2 class="display-4 text-capitalize mb-3">{{ 'contact.message' | translate }}</h2>
         </div>
-        <form>
+        <form #formEl="ngForm" #contactForm (ngSubmit)="formSubmitted(contactForm)">
           <div class="row g-3">
+            <!-- Name -->
             <div class="col-lg-12 col-xl-6">
               <div class="form-floating border border-secondary rounded">
-                <input type="text" class="form-control rounded" id="name" placeholder="Your Name" />
+                <input
+                  type="text"
+                  class="form-control rounded"
+                  id="name"
+                  name="name"
+                  placeholder="Your Name"
+                  ngModel
+                  required
+                />
                 <label for="name">{{ 'contact.form.name' | translate }}</label>
               </div>
             </div>
+
+            <!-- Email -->
             <div class="col-lg-12 col-xl-6">
               <div class="form-floating border border-secondary rounded">
                 <input
                   type="email"
                   class="form-control rounded"
                   id="email"
+                  name="email"
                   placeholder="Your Email"
+                  ngModel
+                  required
+                  email
                 />
                 <label for="email">{{ 'contact.form.email' | translate }}</label>
               </div>
             </div>
+
+            <!-- Phone -->
             <div class="col-lg-12 col-xl-6">
               <div class="form-floating border border-secondary rounded">
-                <input type="phone" class="form-control rounded" id="phone" placeholder="Phone" />
+                <input
+                  type="text"
+                  class="form-control rounded"
+                  id="phone"
+                  name="phone"
+                  placeholder="Phone"
+                  ngModel
+                  required
+                />
                 <label for="phone">{{ 'contact.form.phone' | translate }}</label>
               </div>
             </div>
+
+            <!-- Project -->
             <div class="col-lg-12 col-xl-6">
               <div class="form-floating border border-secondary rounded">
                 <input
                   type="text"
                   class="form-control rounded"
                   id="project"
-                  placeholder="Project"
+                  name="project-type"
+                  placeholder="Project Type"
+                  ngModel
                 />
                 <label for="project">{{ 'contact.form.project' | translate }}</label>
               </div>
             </div>
+
+            <!-- Subject -->
             <div class="col-12">
               <div class="form-floating border border-secondary rounded">
                 <input
                   type="text"
                   class="form-control rounded"
                   id="subject"
+                  name="subject"
                   placeholder="Subject"
+                  ngModel
                 />
                 <label for="subject">{{ 'contact.form.subject' | translate }}</label>
               </div>
             </div>
+
+            <!-- Message -->
             <div class="col-12">
               <div class="form-floating border border-secondary" style="border-radius: 15px">
                 <textarea
-                  style="border-radius: 15px"
+                  style="border-radius: 15px;min-height: 180px;"
                   class="form-control"
-                  placeholder="Leave a message here"
                   id="message"
+                  name="message"
+                  placeholder="Leave a message here"
+                  ngModel
+                  required
                 ></textarea>
                 <label for="message">{{ 'contact.form.msg' | translate }}</label>
               </div>
             </div>
+
+            <!-- Button -->
             <div class="col-12">
-              <button class="btn btn-primary w-100 py-3 rounded">
+              <button class="btn btn-primary w-100 py-3 rounded" [disabled]="formEl.invalid">
                 {{ 'app.buttons.send' | translate }}
               </button>
             </div>
