--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -64,7 +64,7 @@
             ><i class="fas fa-phone-alt text-secondary me-2"></i>+971507190742</a
           >
 
-          <div class="footer-btn d-flex align-items-center mt-4">
+          <!-- <div class="footer-btn d-flex align-items-center mt-4">
             <a
               class="btn btn-secondary btn-md-square me-2 rounded"
               href="https://www.facebook.com/share/17d6us5UEP/"
@@ -75,7 +75,7 @@
               href="https://www.tiktok.com/@altawfiq.demoliti?is_from_webapp=1&sender_device=pc"
               ><i class="fab fa-tiktok text-white"></i
             ></a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
